# loa

./: .gitattributes  .gitignore  .loa-aleph.lock.json  .loa-version.json  .loa.config.yaml  .loa.config.yaml.example  .skill-loop-progress.md  AGENTS.md  AGENTS.md.checksum  BUTTERFREEZONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  PROCESS.md  README.md  VERIFICATION.md  eileendailyimplementationagentmodeagent.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.beads/: issues.jsonl
.claude/: checksums.json  reserved-commands.yaml  settings.json
.run/: bridge-state.json  simstim-state.json  sprint-plan-state.json  state.json
abis/: BGT.ts  BGT_Mainnet.ts  BlockRewardController.ts  BlockRewardController_Mainnet.ts
actions/: retrieve-quests.ts  retrieve-raffles.ts  retrieve-twitter-feed.ts
app/: Navbar.tsx  layout.tsx  page.tsx
artisan/: README.md  manifest.json
components/: SkeletonLoader.tsx  badge-image.tsx  drag-handle-y.tsx  drag-handle.tsx  explore-mint.tsx  explore.tsx  footer.tsx  main-wrapper.tsx  navbar.tsx  partner-image.tsx  quest-display.tsx  raffle-display.tsx  s3-image.tsx  secondary-tweet-display.tsx  section-select.tsx  sidebar.tsx  skeleton-display.tsx  tweet-display.tsx  tweet-skeleton.tsx  web3-provider.tsx
constants/: api.ts  articles.ts  blog.ts  chains.ts  contracts.ts  dashboard.tsx  development.ts  explore.ts  hero.ts  hero.tsx  incubated.ts  nft.ts  partners.ts  perks.ts  quest.ts  quotes.tsx  raffle.ts  section.ts  tools.ts  tracks.ts  update.ts
(+1428 files in other folders)
