[package]
name = "kakukuma"
version = "0.1.0"
edition = "2021"
description = "Terminal-based ASCII art editor"
license = "MIT"
repository = "https://github.com/gumi/kakukuma"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "kakukuma"
path = "src/main.rs"
